Updated front end

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="516x516" href="%PUBLIC_URL%/logo3.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="AI-Driven Lie Detection System - Advanced truth analysis using voice, facial, and handwriting recognition"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo3.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>AI Lie Detection System</title>
+    <title>VeriCloud</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
